# base2sft_truth

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  commands_run.md  config.py  next_steps.md  pyproject.toml  requirements.txt  tim_notes.txt  truth_spec_analysis.md
.ipynb_checkpoints/: README-checkpoint.md
paper_data/: 00README.json  icml2026.sty  main.bbl  main.bib  main.tex
plans/: olmo3_7b_pipeline.md
results/: layer_sweep_olmo3-7b_fleed.csv  transfer_llama-8b-base_layer15.csv  transfer_llama-8b_layer15.csv  transfer_olmo3-7b-purebase_layer18.csv  transfer_olmo3-7b-purebase_layer18_C0.00001.csv  transfer_olmo3-7b-purebase_layer18_C0.0001.csv  transfer_olmo3-7b-purebase_layer18_C0.005.csv  transfer_olmo3-7b-purebase_layer18_C0.01.csv  transfer_olmo3-7b-purebase_layer18_C0.1.csv  transfer_olmo3-7b-purebase_layer18_C1.0.csv  transfer_olmo3-7b-purebase_layer18_with_onpolicy.csv  transfer_olmo3-7b_layer18.csv  transfer_olmo3-7b_layer18_C0.00001.csv  transfer_olmo3-7b_layer18_C0.0001.csv  transfer_olmo3-7b_layer18_C0.005.csv  transfer_olmo3-7b_layer18_C0.01.csv  transfer_olmo3-7b_layer18_C0.1.csv  transfer_olmo3-7b_layer18_C1.0.csv  transfer_olmo3-7b_layer18_with_onpolicy.csv
scripts/: analyze_bio_sycophancy.py  compare_lr_vs_sgd.py  create_sycophancy_dataset.py  create_sycophancy_dataset_v2.py  extract_activation.py  leace.py  measure_base_confidence.py  measure_instruct_confidence.py  prep_data.py  stratified_inlp.py  sweep_lr_regularization.py  train_sycophancy_v2_probes.py  train_test_probes.py  train_test_probes_tuning.sh  validate_sycophancy_on_base.py
(+350 files in other folders)
